# p5-debian-firmware-custom-dell_g7_17

./: .gitmodules  CMakeLists.txt  README.md  missing-firmware.txt  postinst
