cmake_minimum_required(VERSION 3.5)
project("p5-debian-firmware-custom-dell_g7_17")

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/rtl_nic/rtl8168fp-3.fw" DESTINATION "/lib/firmware/rtl_nic")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/icl_dmc_ver1_09.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/skl_huc_2.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/bxt_huc_2.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/kbl_huc_4.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/glk_huc_4.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/cml_huc_4.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/cml_guc_33.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/icl_huc_9.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/ehl_huc_9.0.0.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/ehl_guc_33.0.4.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/tgl_huc_7.0.3.bin" DESTINATION "/lib/firmware/i915")
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/linux-firmware/i915/tgl_guc_35.2.0.bin" DESTINATION "/lib/firmware/i915")

if(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
    set(CPACK_PACKAGE_NAME "p5-firmware-custom-dell_g7_17")
    set(CPACK_PACKAGE_VENDOR "p5 team")
    set(CPACK_PACKAGE_CONTACT "vbnekit@gmail.com")
    set(CPACK_PACKAGE_VERSION "20200428-0")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "custom missing DELL G7 17 firmware for debian")

    set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
    set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst")

    set(CPACK_BUILD_SOURCE_DIRS ${PROJECT_BINARY_DIR})
    set(CPACK_INSTALL_CMAKE_PROJECTS "${PROJECT_BINARY_DIR};${PROJECT_NAME};ALL;/")
    set(CPACK_SOURCE_OUTPUT_CONFIG_FILE "${PROJECT_BINARY_DIR}/CPackSourceConfig.cmake")
    set(CPACK_OUTPUT_CONFIG_FILE "${PROJECT_BINARY_DIR}/CPackConfig.cmake")
    include(CPack)
endif(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
